--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 /src/cache
 /venv/
 /src/examples/
+/src/.ipynb_checkpoints
+/src/dirac/.ipynb_checkpoints/
+/src/dirac/cache/
+/src/maps/.ipynb_checkpoints/
+/src/playground/.ipynb_checkpoints/
+/src/playground/cache/
+/src/playground/graphs/
